--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="calculator.html">Html calculator</a></li>
+        <li><a href="calculator.html">Loan calculator</a></li>
       </ul>
     </nav>
 
@@ -79,7 +79,7 @@
     <footer class="footer">
       <p class="footer-text">
         This is made by <span class="author">Stipo Margić</span>. &copy;
-        <span id="year"></span>year.
+        <span id="year"></span> year.
       </p>
     </footer>
     <script src="js/script.js"></script>
