--- a/calculator.html
+++ b/calculator.html
@@ -35,16 +35,17 @@
     </header>
 
     <div class="container-calculator">
+      <div class="alert" id="alert"></div>
       <div class="calculator">
         <div class="inputs">
           <input
-            type="text"
+            type="number"
             id="money"
             class="money"
             placeholder="Type amount..."
           />
           <input
-            type="text"
+            type="number"
             id="months"
             placeholder="Type months..."
             class="months"
