--- a/index.html
+++ b/index.html
@@ -33,6 +33,43 @@
         ><button class="cta-btn" id="open">Calculate your loan</button></a
       >
     </header>
+    <section id="benefits">
+      <header class="benefits-head">
+        <h2>The Perfect Bank</h2>
+      </header>
+      <div class="cards">
+        <div class="card">
+          <div class="card-icon">
+            <img src="/icons/route-solid.svg" alt="" />
+          </div>
+          <h4>Lowest intress</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint sed
+            deleniti modi ipsa blanditiis incidunt!
+          </p>
+        </div>
+        <div class="card">
+          <div class="card-icon">
+            <img src="/icons/bed-solid.svg" alt="" />
+          </div>
+          <h4>30 Day Money Back</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint sed
+            deleniti modi ipsa blanditiis incidunt!
+          </p>
+        </div>
+        <div class="card">
+          <div class="card-icon">
+            <img src="./icons/plane-departure-solid.svg" alt="" />
+          </div>
+          <h4>Tailored Customer Support</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint sed
+            deleniti modi ipsa blanditiis incidunt!
+          </p>
+        </div>
+      </div>
+    </section>
 
     <div class="container">
       <h2>What is this page about?</h2>
