--- a/index.html
+++ b/index.html
@@ -93,14 +93,6 @@
         impedit esse quibusdam, deleniti laudantium rerum beatae, deserunt nemo
         neque, obcaecati exercitationem sit. Earum.
       </p>
-
-      <h2>Benefits</h2>
-      <ul>
-        <li>Lowest intress</li>
-        <li>30 Day Money Back</li>
-        <li>Tailored Customer Support</li>
-      </ul>
-
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse quam
         nostrum, fugiat, itaque natus officia laborum dolorum id accusantium
@@ -112,6 +104,22 @@
         doloremque placeat accusamus iste, culpa quaerat consequatur?
       </p>
     </div>
+    <section class="team">
+      <div class="team-photo"></div>
+      <div class="team-text">
+        <h2>Our Bank Team</h2>
+        <h3>Mission</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore, ab?
+        </p>
+        <h3>Vision</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus impedit
+          repellat amet corporis atque officia voluptatem, ipsam veniam porro
+          architecto!
+        </p>
+      </div>
+    </section>
 
     <footer class="footer">
       <p class="footer-text">
